adds sonar properties

--- a/sonar-server.properties
+++ b/sonar-server.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=jenkins-sonar
 sonar.sources=.
-sonar.login=username
-sonar.password=password
+sonar.login=admin
+sonar.password=admin
