--- a/sonar-server.properties
+++ b/sonar-server.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=jenkins-sonar
 sonar.sources=.
+sonar.host.url=http://132.82.223.100:9000
 sonar.login=devops
 sonar.password=devops
