--- a/sonar-server.properties
+++ b/sonar-server.properties
@@ -1,5 +1,4 @@
 sonar.projectKey=jenkins-sonar
 sonar.sources=.
 sonar.host.url=http://132.82.223.100:9000
-sonar.login=devops
-sonar.password=devops
+sonar.login=879a1ec5f933498c447b37d3453fae582e7f2c80
