rename sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=jenkins-sonar
 sonar.sources=.
 sonar.host.url=http://132.82.223.100:9000
-sonar.login=879a1ec5f933498c447b37d3453fae582e7f2c80
+sonar.login=devops
+sonar.password=devops
